#######################################################################################################################
# Copyright [2021-2023] Renesas Electronics Corporation and/or its licensors. All Rights Reserved.
#
# The contents of this file (the "contents") are proprietary and confidential to Renesas Electronics Corporation
# and/or its licensors ("Renesas") and subject to statutory and contractual protections.
#
# Unless otherwise expressly agreed in writing between Renesas and you: 1) you may not use, copy, modify, distribute,
# display, or perform the contents; 2) you may not use any name or mark of Renesas for advertising or publicity
# purposes or in connection with your use of the contents; 3) RENESAS MAKES NO WARRANTY OR REPRESENTATIONS ABOUT THE
# SUITABILITY OF THE CONTENTS FOR ANY PURPOSE; THE CONTENTS ARE PROVIDED "AS IS" WITHOUT ANY EXPRESS OR IMPLIED
# WARRANTY, INCLUDING THE IMPLIED WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, AND
# NON-INFRINGEMENT; AND 4) RENESAS SHALL NOT BE LIABLE FOR ANY DIRECT, INDIRECT, SPECIAL, OR CONSEQUENTIAL DAMAGES,
# INCLUDING DAMAGES RESULTING FROM LOSS OF USE, DATA, OR PROJECTS, WHETHER IN AN ACTION OF CONTRACT OR TORT, ARISING
# OUT OF OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THE CONTENTS. Third-party contents included in this file may
# be subject to different terms.
#######################################################################################################################

message(STATUS "OS")

#----------------------------------------------------------------------------------------------------------------------
# Include each SoC definition
#----------------------------------------------------------------------------------------------------------------------
include(${CMAKE_CURRENT_SOURCE_DIR}/../soc_definition.cmake)

add_subdirectory(test_resource/1)
add_subdirectory(test_resource/2)
add_subdirectory(test_resource/3)
add_subdirectory(test_resource/4)
add_subdirectory(test_resource/5)
add_subdirectory(test_resource/6)
add_subdirectory(test_resource/7)
add_subdirectory(test_resource/8)
add_subdirectory(test_resource/9)
add_subdirectory(test_resource/10)
add_subdirectory(test_resource/11)
add_subdirectory(test_resource/12)
add_subdirectory(test_resource/13)
add_subdirectory(test_resource/14)
add_subdirectory(test_resource/15)
add_subdirectory(test_resource/16)
add_subdirectory(test_resource/17)
add_subdirectory(test_resource/18)
add_subdirectory(test_resource/19)
add_subdirectory(test_resource/20)
add_subdirectory(test_resource/21-22)
add_subdirectory(test_resource/23)
add_subdirectory(test_resource/24)
add_subdirectory(test_resource/25)
add_subdirectory(test_resource/26)
add_subdirectory(test_resource/27)
add_subdirectory(test_resource/28)
add_subdirectory(test_resource/29)
add_subdirectory(test_resource/30)
add_subdirectory(test_resource/31)
add_subdirectory(test_resource/32)
add_subdirectory(test_resource/33)
add_subdirectory(test_resource/34)
add_subdirectory(test_resource/35)
add_subdirectory(test_resource/36)
add_subdirectory(test_resource/37)
add_subdirectory(test_resource/38)
add_subdirectory(test_resource/39)
add_subdirectory(test_resource/40)
add_subdirectory(test_resource/41)
add_subdirectory(test_resource/42-47)
add_subdirectory(test_resource/48-50)
add_subdirectory(test_resource/51-52)
add_subdirectory(test_resource/53-54)
add_subdirectory(test_resource/55-56)
add_subdirectory(test_resource/57)
add_subdirectory(test_resource/58)
add_subdirectory(test_resource/59-60)
add_subdirectory(test_resource/61-62)
add_subdirectory(test_resource/63-64)
add_subdirectory(test_resource/65-66)
add_subdirectory(test_resource/67-68)
add_subdirectory(test_resource/69-72_80_90-92_94-97)
add_subdirectory(test_resource/73)
add_subdirectory(test_resource/74)
add_subdirectory(test_resource/75)
add_subdirectory(test_resource/76)
add_subdirectory(test_resource/77)
add_subdirectory(test_resource/78)
add_subdirectory(test_resource/79_88-89)
add_subdirectory(test_resource/81)
add_subdirectory(test_resource/82)
add_subdirectory(test_resource/83)
add_subdirectory(test_resource/84)
add_subdirectory(test_resource/85)
add_subdirectory(test_resource/86)
add_subdirectory(test_resource/87_93)
add_subdirectory(test_resource/98)
add_subdirectory(test_resource/99)
