#######################################################################################################################
# Copyright [2023] Renesas Electronics Corporation and/or its licensors. All Rights Reserved.
#
# The contents of this file (the "contents") are proprietary and confidential to Renesas Electronics Corporation
# and/or its licensors ("Renesas") and subject to statutory and contractual protections.
#
# Unless otherwise expressly agreed in writing between Renesas and you: 1) you may not use, copy, modify, distribute,
# display, or perform the contents; 2) you may not use any name or mark of Renesas for advertising or publicity
# purposes or in connection with your use of the contents; 3) RENESAS MAKES NO WARRANTY OR REPRESENTATIONS ABOUT THE
# SUITABILITY OF THE CONTENTS FOR ANY PURPOSE; THE CONTENTS ARE PROVIDED "AS IS" WITHOUT ANY EXPRESS OR IMPLIED
# WARRANTY, INCLUDING THE IMPLIED WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, AND
# NON-INFRINGEMENT; AND 4) RENESAS SHALL NOT BE LIABLE FOR ANY DIRECT, INDIRECT, SPECIAL, OR CONSEQUENTIAL DAMAGES,
# INCLUDING DAMAGES RESULTING FROM LOSS OF USE, DATA, OR PROJECTS, WHETHER IN AN ACTION OF CONTRACT OR TORT, ARISING
# OUT OF OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THE CONTENTS. Third-party contents included in this file may
# be subject to different terms.
#######################################################################################################################

message(STATUS "OS")

#----------------------------------------------------------------------------------------------------------------------
# Include each SoC definition
#----------------------------------------------------------------------------------------------------------------------
include(${CMAKE_CURRENT_SOURCE_DIR}/../soc_definition.cmake)

add_subdirectory(osal_sample_resource/TestCmake/1-1)
add_subdirectory(osal_sample_resource/TestCmake/1-2)
add_subdirectory(osal_sample_resource/TestCmake/1-3)
add_subdirectory(osal_sample_resource/TestCmake/1-4)
add_subdirectory(osal_sample_resource/TestCmake/1-5)
add_subdirectory(osal_sample_resource/TestCmake/1-6)
add_subdirectory(osal_sample_resource/TestCmake/1-7)
add_subdirectory(osal_sample_resource/TestCmake/1-8)
add_subdirectory(osal_sample_resource/TestCmake/1-9)
add_subdirectory(osal_sample_resource/TestCmake/2-1)
add_subdirectory(osal_sample_resource/TestCmake/2-2)
add_subdirectory(osal_sample_resource/TestCmake/2-3)
add_subdirectory(osal_sample_resource/TestCmake/2-4)
add_subdirectory(osal_sample_resource/TestCmake/2-5)
add_subdirectory(osal_sample_resource/TestCmake/2-6)
add_subdirectory(osal_sample_resource/TestCmake/2-7)
add_subdirectory(osal_sample_resource/TestCmake/2-8)
add_subdirectory(osal_sample_resource/TestCmake/2-9)
add_subdirectory(osal_sample_resource/TestCmake/3-1)
add_subdirectory(osal_sample_resource/TestCmake/3-2)
add_subdirectory(osal_sample_resource/TestCmake/3-3)
add_subdirectory(osal_sample_resource/TestCmake/3-4)
add_subdirectory(osal_sample_resource/TestCmake/3-5)
add_subdirectory(osal_sample_resource/TestCmake/3-6)
add_subdirectory(osal_sample_resource/TestCmake/3-7)
add_subdirectory(osal_sample_resource/TestCmake/3-8)
add_subdirectory(osal_sample_resource/TestCmake/3-9)
add_subdirectory(osal_sample_device/TestCmake/1-1)
add_subdirectory(osal_sample_device/TestCmake/1-2)
add_subdirectory(osal_sample_device/TestCmake/1-3)
add_subdirectory(osal_sample_device/TestCmake/1-4)
add_subdirectory(osal_sample_device/TestCmake/1-5)
add_subdirectory(osal_sample_device/TestCmake/1-6)
add_subdirectory(osal_sample_device/TestCmake/1-7)
add_subdirectory(osal_sample_device/TestCmake/1-8)
add_subdirectory(osal_sample_device/TestCmake/1-9)
add_subdirectory(osal_sample_device/TestCmake/2-1)
add_subdirectory(osal_sample_device/TestCmake/2-2)
add_subdirectory(osal_sample_device/TestCmake/2-3)
add_subdirectory(osal_sample_device/TestCmake/2-4)
add_subdirectory(osal_sample_device/TestCmake/2-5)
add_subdirectory(osal_sample_device/TestCmake/2-6)
add_subdirectory(osal_sample_device/TestCmake/2-7)
add_subdirectory(osal_sample_device/TestCmake/2-8)
add_subdirectory(osal_sample_device/TestCmake/2-9)
add_subdirectory(osal_sample_device/TestCmake/3-1)
add_subdirectory(osal_sample_device/TestCmake/3-2)
add_subdirectory(osal_sample_device/TestCmake/3-3)
add_subdirectory(osal_sample_device/TestCmake/3-4)
add_subdirectory(osal_sample_device/TestCmake/3-5)
add_subdirectory(osal_sample_device/TestCmake/3-6)
add_subdirectory(osal_sample_device/TestCmake/3-7)
add_subdirectory(osal_sample_device/TestCmake/3-8)
add_subdirectory(osal_sample_device/TestCmake/3-9)
